fix bleeding

--- a/app/components/attendanceTable.css
+++ b/app/components/attendanceTable.css
@@ -6,14 +6,14 @@
   overflow: hidden;
 }
 
-th {
+.attendancetable th {
   background-color: #4caf50;
   color: white;
   padding: 12px 15px;
   text-align: left;
 }
 
-td {
+.attendancetable td {
   padding: 12px 15px;
   border-bottom: 1px solid #ddd;
 }
